# worktrack

./: .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  CLAUDE.md  Dockerfile.backend  Dockerfile.dashboard  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/agent/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/agent/src/: App.tsx  main.tsx
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/capabilities/: main.json
apps/agent/src-tauri/icons/: README.md
apps/agent/src-tauri/src/: commands.rs  config.rs  error.rs  keychain.rs  lib.rs  main.rs  state.rs  tray.rs
apps/agent/src-tauri/src/buffer/: mod.rs
apps/agent/src-tauri/src/monitor/: mod.rs
apps/agent/src-tauri/src/monitor/platform/: mod.rs
apps/agent/src-tauri/src/sync/: api.rs  mod.rs
apps/backend/: .env.example  .eslintrc.cjs  package.json  tsconfig.json  vitest.config.ts
apps/backend/scripts/: generate-keys.sh
apps/backend/src/: app.ts  config.ts  server.ts
apps/dashboard/: .eslintrc.cjs  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx
apps/dashboard/components/: CategoryPie.tsx  Sidebar.tsx
apps/extension/: .eslintrc.cjs  README.md  package.json  tsconfig.json
docker/nginx/: proxy.conf
docker/postgres/: init.sql
docs/: api.md  architecture.md  deployment.md  privacy-policy.md  security.md
scripts/: backup.sh  restore.sh
(+84 files in other folders)
